<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:columnCount="2"
                android:layout_gravity="center"
                android:useDefaultMargins="true"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UserName"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_columnSpan="2"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="38dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_title"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="32dp"/>
                <Button
                    android:id="@+id/select_home_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_location_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/home_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_location_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/home_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_location_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <EditText
                    android:id="@+id/home_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24dp"/>





                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_title"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="32dp"/>
                <Button
                    android:id="@+id/select_work_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_location_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/work_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_location_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/work_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_location_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <EditText
                    android:id="@+id/work_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24dp"/>




                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_title"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="32dp"/>
                <Button
                    android:id="@+id/select_school_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_location_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/school_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_location_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/school_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_location_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_label"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="24dp"/>
                <EditText
                    android:id="@+id/school_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24dp"/>

            </GridLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_menu"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_navigation_menu"
            app:itemTextColor="@color/colorAccent"
            app:labelVisibilityMode="labeled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>